# acre

./: LICENSE  README.md  justfile  pyproject.toml
contrib/scripts/: acre-start.sh
development/: todo.txt
docs/: config.example.toml  state-file-example.json  suggested-aliases.sh
docs/development/: todo.md
src/: codereview.py  test_lib_cli.py
src/cli/: context.py  parser.py  pretty.py  util.py
src/lib/: cli.py  commands_v0.py  commit_range.py  diff_filter.py  hunk_filter.py  initialize.py  models.py  review_identifier.py  state.py  test_lib_cli.py
src/lib/commands/: init.py  interactive.py  preapprove.py  review.py  simple_commands.py
src/lib/config/: config.py
src/lib/sources/: git.py  github.py  jira.py
src/tests/: test_approve_command.py  test_git_diff_lines_color.py  test_git_range_parsing.py  test_hunk_regex_filter.py  test_interactive_default_command_for_args.py  test_jira_tag.py  test_lib_cli.py  test_mark_reviewed_prompt.py  test_placeholder.py  test_preapproval_diff_filter.py  test_preapprove_clear.py  test_preapprove_command.py  test_preapprove_hunk_option.py  test_preapprove_hunk_selector.py  test_preapprove_index_argument.py  test_preapprove_persistence.py  test_review_command_selection.py  test_review_diff_line_numbers.py  test_review_focus_regex_integration.py  test_review_hunk_numbers.py  test_review_identifier.py  test_review_state_helpers.py  test_review_test_diff_first.py  test_state_manager_persistence.py
