[tool.poetry]
name = "acre"
version = "0.9.0"
description = "acre code review engine"
authors = ["Dev Purkayastha <dev.purkayastha@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["code", "review"]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.405"
ruff = "^0.12.11"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
