[project]
name = "acre"
version = "0.10.0"
description = "acre code review engine"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Dev Purkayastha", email = "dev.purkayastha@gmail.com" }]
keywords = ["code", "review"]
dependencies = []

[dependency-groups]
dev = ["pyright>=1.1.405", "ruff>=0.12.11", "pytest>=8.4.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli", "src/lib"]
